<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <string name="fragment_launch_upcoming_elections">Upcoming Elections</string>
    <string name="fragment_launch_find_my_representatives">Find My Representatives</string>

    <string name="fragment_elections_upcoming_elections">Upcoming Elections</string>
    <string name="fragment_elections_saved_elections">Saved Elections</string>

    <string name="fragment_election_info_election_info">Election Information</string>
    <string name="fragment_election_info_voting_locations">Voting Locations</string>
    <string name="fragment_election_info_ballot_information">Ballot Information</string>
    <string name="fragment_election_info_follow_election">Follow Election</string>
    <string name="fragment_election_info_unfollow_election">Unfollow Election</string>

    <string name="fragment_representative_representative_search">Representative Search</string>
    <string name="fragment_representative_find_my_representatives">Find my Representatives</string>
    <string name="fragment_representative_use_my_location">Use My Location</string>
    <string name="fragment_representative_my_representatives">My Representatives</string>


</resources>
